--- a/DatingApp.api/appsettings.json
+++ b/DatingApp.api/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AppSettings":{
+    "Token":"super secret key"
+},
+  "ConnectionStrings":{
+    "DefaultConnection":"Server=localhost;Database=datingapp; Uid=appuser; Pwd=password"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "CloudinarySettings":{
+    "CloudName":"teksavvy",
+    "ApiKey":"193417897881348",
+    "ApiSecret":"hrhOcpgurZosDmYP8yk_1xKjdLQ"
+},
   "AllowedHosts": "*"
 }
